bk_ida/gobmkida/c2/owl_threaten_attack
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/owl_threaten_attack/src/engine/owl.c:2180:37: error: use of undeclared identifier 'byte_9B389F'
for ( j = 22LL; ( unsigned __int8)( byte_9B389F[j] - 1) > 1u || v8->goal[j - 1] != 1; j += 2LL ) 
                                    ^
1 error generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/owl_threaten_attack/src/obj/1/owl.o] Error 1
